improve pin impact rule calculations